# experiments

./: .gitignore  CMakeLists.txt  README.md  main.cpp
any_callable/: CMakeLists.txt  README.md  any_callable.h  main.cpp
callback/: README.md  callback.h
generic_pipe/: README.md  pipe.h
meta_struct/: CMakeLists.txt  README.md  main.cpp  meta_struct.h  named_type.h  static_string.h
smark/: CMakeLists.txt  README.md
smark/cmake/: FindDearImGui.cmake  FindGlfw.cmake  Findglfw.cmake
static_string/: README.md  static_string.h
